--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -109,13 +109,14 @@ jobs:
         # Pull the Docker image
         docker pull $(OS_TYPE)
         
-        # Start the container
+        # Start the container with proper init to handle zombie processes
         docker run -d \
           $(DOCKER_EXTRA_ARG) \
           -h pbs.dev.local \
           --name $(CONTAINER_NAME) \
           -v $(pwd):$(pwd) \
           --privileged \
+          --init \
           -w $(pwd) \
           $(OS_TYPE) \
           /bin/bash -c "sleep 3600"
@@ -128,6 +129,13 @@ jobs:
     - script: |
         # Install packages
         docker exec $(CONTAINER_NAME) bash -c "$(PKG_INSTALL_CMD)"
+        
+        # Install additional tools for process management
+        if [[ "$(OS_TYPE)" == *"ubuntu"* ]]; then
+          docker exec $(CONTAINER_NAME) bash -c "apt-get install -y procps psmisc"
+        else
+          docker exec $(CONTAINER_NAME) bash -c "yum install -y procps-ng psmisc || dnf install -y procps-ng psmisc"
+        fi
         
         # Verify Python installation
         docker exec $(CONTAINER_NAME) python3 --version
@@ -147,12 +155,80 @@ jobs:
           docker exec $(CONTAINER_NAME) bash -c "python3 -c 'print(\"Python test successful\")'"
         fi
         
+        # Check for any PBS processes and stop them properly
+        echo "Checking for PBS processes..."
+        docker exec $(CONTAINER_NAME) bash -c "ps aux | grep -E 'pbs_|openpbs' || echo 'No PBS processes found'"
+        
+        # Stop PBS services properly if they're running
+        docker exec $(CONTAINER_NAME) bash -c "
+          if command -v pbs_server &> /dev/null; then
+            echo 'Stopping PBS services...'
+            pkill -TERM pbs_server || true
+            pkill -TERM pbs_sched || true
+            pkill -TERM pbs_mom || true
+            pkill -TERM pbs_ds_monitor || true
+            sleep 2
+            # Force kill if still running
+            pkill -KILL pbs_server || true
+            pkill -KILL pbs_sched || true
+            pkill -KILL pbs_mom || true
+            pkill -KILL pbs_ds_monitor || true
+          fi
+        " || true
+        
       displayName: 'Run CI tests'
       
     - script: |
-        # Cleanup
+        # Monitor processes before running CI
+        echo "=== Process monitoring before CI ==="
+        docker exec $(CONTAINER_NAME) bash -c "
+          echo 'Current processes:'
+          ps aux | head -20
+          echo ''
+          echo 'Checking for zombie/defunct processes:'
+          ps aux | grep -E 'defunct|<zombie>' || echo 'No zombie processes found'
+          echo ''
+          echo 'PBS-related processes:'
+          ps aux | grep -E 'pbs_|openpbs' || echo 'No PBS processes found'
+        "
+      displayName: 'Monitor processes before CI'
+      
+    - script: |
+        # Proper PBS cleanup and container shutdown
+        echo "Cleaning up PBS processes and container..."
+        
+        # Stop PBS services gracefully first
+        docker exec $(CONTAINER_NAME) bash -c "
+          echo 'Stopping PBS services gracefully...'
+          if command -v qterm &> /dev/null; then
+            qterm -t quick || true
+          fi
+          
+          # Stop individual PBS components
+          pkill -TERM pbs_server || true
+          pkill -TERM pbs_sched || true  
+          pkill -TERM pbs_mom || true
+          pkill -TERM pbs_ds_monitor || true
+          
+          # Wait a bit for graceful shutdown
+          sleep 3
+          
+          # Force kill any remaining PBS processes
+          pkill -KILL pbs_server || true
+          pkill -KILL pbs_sched || true
+          pkill -KILL pbs_mom || true
+          pkill -KILL pbs_ds_monitor || true
+          
+          # Clean up any remaining zombie processes
+          ps aux | grep -E 'defunct|<zombie>' || echo 'No zombie processes found'
+        " || true
+        
+        # Stop and remove container
         docker stop $(CONTAINER_NAME) || true
         docker rm $(CONTAINER_NAME) || true
+        
+        # Clean up any orphaned containers with same name pattern
+        docker ps -a | grep -E 'ubuntu2404|ubuntu2004|rocky-sanitize|rocky-kerberos' | awk '{print $1}' | xargs -r docker rm -f || true
         
       displayName: 'Cleanup Docker container'
       condition: always()
